--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="main.css">
-    <title></title>
+    <title>Farmer Fred’s Watermelon Paradise</title>
   </head>
   <body>
+    <h1>Farmer Fred’s Watermelon Paradise</h1>
 
   </body>
 </html>
