--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
   </head>
   <body>
     <h1>Farmer Fred’s Watermelon Paradise</h1>
+<center>
+<img src="watermelonone.jfif" alt="">
 
+<h3> ALL ABOUT WATERMELONS</h3>
+<p> Citrullus lanatus is a plant species in the family Cucurbitaceae, a vine-like (scrambler and trailer) flowering plant originally from Africa. It is cultivated for its fruit. The subdivision of this species into two varieties, watermelons (Citrullus lanatus (Thunb.) var. lanatus) and citron melons (Citrullus lanatus var. citroides (L. H. Bailey) Mansf.), originated with the erroneous synonymization of Citrullus lanatus (Thunb.) Matsum. & Nakai and Citrullus vulgaris Schrad. by L.H. Bailey in 1930.[2] Molecular data including sequences from the original collection of Thunberg and other relevant type material, show that the sweet watermelon (Citrullus vulgaris Schrad.) and the bitter wooly melon Citrullus lanatus (Thunb.) Matsum. & Nakai are not closely related to each other.[3] Since 1930, thousands of papers have misapplied the name Citrullus lanatus (Thunb.) Matsum. & Nakai for the watermelon, and a proposal to conserve the name with this meaning was accepted by the relevant nomenclatural committee and confirmed at the International Botanical Congress in Shenzhen.[4]
+</p>
+
+<ul>
+<strong>  VARIETIES AVAILABLE FARM FRESH </strong>
+  <li>Crimson Sweet</li>
+  <li>Extazy</li>
+  <li>Golden Midget</li>
+  <li>Jubilee</li>
+  <li>Mickylee</li>
+</ul>
+</center>
   </body>
 </html>
