--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Farmer Fred’s Watermelon Paradise</title>
   </head>
   <body>
+    <center>
     <h1>Farmer Fred’s Watermelon Paradise</h1>
-<center>
+
 <img src="watermelonone.jfif" alt="Watermelon with on slice">
 
 <h3> ALL ABOUT WATERMELONS</h3>
@@ -24,6 +25,9 @@
   <li>Jubilee</li>
   <li>Mickylee</li>
 </ul>
-</center>
+
   </body>
+
+  <footer> © 2018 Farmer Fred 12 Melonville, West Cantaloupe, St. Melatonin. +222-986-4471. freddykjk12@aol.com</footer>
+  </center>
 </html>
